Added post user endpoint
