# api/controllers/UserController.js
@@ -11,8 +11,41 @@ var User = require('../models').User;
 function get(req, res) {
     var id = req.swagger.params.id.value;
     res.json(User.findById(id));
+
+/**
+ * Create new user
+ *
+ * @param      {object}  req     The request
+ * @param      {object}  res     The resource
+ */
+function post(req, res, next) {
+  async.waterfall([function(cb) {
+    // check if username exist
+    User.findOne({
+      where: { username: req.body.username },
+      attributes: ['username']
+      })
+      .then(function(user) {
+        if(!_.isNil(user)) {
+          cb(new errors.AlreadyInUseError(user.username, 'username'));
+        }
+        cb(null);
+      });
+  }, function(cb) {
+    // create the user
+    User.create(_.pick(req.body, ['username', 'password']))
+      .then(function(user) {
+        cb(null, user.get({plain: true}));
+      }, cb);
+  }], function(err, user) {
+    if(err) {
+      return next(err);
+    }
+    return res.json(_.omit(user, ['password']));
+  });
 }
 
 module.exports = {
-  get: get
+  get: get,
+  post: post
 };
